# NokiaSnake

./: .gitignore  CMakeLists.txt  main.cpp
levels/: .gitignore  standard_level1.level  standard_level2.level
src/: Game.cpp  Game.h  Player.cpp  Player.h
src/common/: Direction.cpp  Direction.h  InputAction.h  Point2D.cpp  Point2D.h
src/contract/: LevelContract.cpp  LevelContract.h  MapBlockType.h  UserSettingsContract.cpp  UserSettingsContract.h
src/event/: BlockEvent.cpp  BlockEvent.h  DealSnakeDamageEvent.cpp  DealSnakeDamageEvent.h  IncreaseScoreEvent.cpp  IncreaseScoreEvent.h  LevelPassEvent.cpp  LevelPassEvent.h  TeleportSnake.cpp  TeleportSnake.h
src/level/: Block.cpp  Block.h  BlockBorder.cpp  BlockBorder.h  BlockFood.cpp  BlockFood.h  BlockGate.cpp  BlockGate.h  Level.cpp  Level.h  LevelLoader.cpp  LevelLoader.h  Snake.cpp  Snake.h
src/model/: LevelInfo.h
src/proxy/: ConsoleProxy.cpp  ConsoleProxy.h  GameProxy.cpp  GameProxy.h
